fix input overlap on to do list

--- a/style.css
+++ b/style.css
@@ -786,7 +786,7 @@ input[type]:checked ~ span.middle {
 }
 
 .number-input:focus,
-input:hover {
+.group input:hover {
   outline: none;
   border-color: rgba(129, 140, 248);
   background-color: #282828;
